--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "react": "^0.14.8",
     "standard": "^8.5.0"
   }
